moved styles to main styles

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -1,7 +1,20 @@
 /* Root styles */
 * {
     font-family: 'Plus Jakarta Sans';
-   
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent; 
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  overflow: hidden;
 }
 
 header {
