--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -33,7 +33,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 4px
+    gap: 4px;
+    padding-top: 80px;
 }
 
 h1 {
@@ -90,6 +91,7 @@ button:disabled {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 15px;
 }
 
 .difficulty-text {
@@ -157,7 +159,7 @@ button:disabled {
     flex-direction: column;
     gap: 50px;
     justify-content: flex-start;
-    padding: 80px 0 0 0;
+    padding-top: 40px;
 }
 
 .selection-wrapper {
