--- a/styles/styles.css
+++ b/styles/styles.css
@@ -286,11 +286,6 @@
   align-items: center;
   gap: 0.625rem;
   color: #000;
-
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
 }
 
 .arrival-btn,
@@ -362,12 +357,11 @@
 
 
 /* Challenge Screen Styles */
-.challenge-container {
+.challenge-container, .final-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  min-height: 100vh;
 }
 
 .challenge-header {
@@ -418,3 +412,16 @@
 .screen.active {
   display: block;
 }
+
+/* Final screen */
+
+.final-image {
+  width: 21rem;
+  height: 21rem;
+}
+
+.final-container h1 {
+  padding: 2.2rem 0;
+}
+
+
