--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,7 +241,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  padding: 16px 20px;
+  padding: 0 16px 20px 16px;
   font-size: 1.5rem;
   font-weight: 700;
 }
@@ -273,8 +273,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding-top: 0.97rem;
-  padding-bottom: 0.94rem;
+  padding: 16px 0;
 }
 
 .arrival-instruction {
