--- a/styles/styles.css
+++ b/styles/styles.css
@@ -354,13 +354,21 @@
   margin-bottom: 10px;
 }
 
-.challenge-image {
+.challenge-image-container {
   width: 290px;
   height: 330px;
   margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.challenge-image {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
 }
 
 .challenge-description h2 {
