--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -13,7 +13,6 @@
 }
 * {
     font-family: 'Plus Jakarta Sans';
-    background-color: var(--background);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -36,6 +35,7 @@ header {
     align-items: center;
     gap: 4px;
     padding-top: 70px;
+    background: var(--background)
 }
 
 h1 {
