--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -112,7 +112,6 @@ button:disabled {
 .time-buttons, .difficulty-buttons {
     display: flex;
     gap: 10px;
-    margin-top: 8px;
 }
 
 .time-buttons input[type="radio"], 
@@ -122,8 +121,12 @@ button:disabled {
 
 .time-buttons label, 
 .difficulty-buttons label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 1px solid var(--black);
-    padding: 0.7rem 1rem;
+    width: 80px;
+    height: 45px;
     border-radius: 1.25rem;
     cursor: pointer;
     transition: all 0.2s;
