fixed cancel pop up issue

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -6,7 +6,7 @@
     --dark-green: #275239;
     --orange: #FF8F00;
     --yellow: #FFC107;
-    --warning: #FF4242;
+    --warning: #B53131;
     --background: #F5EFED;
     --grey: #AEAEAE;
 }
