--- a/styles/styles.css
+++ b/styles/styles.css
@@ -274,6 +274,10 @@ header {
     text-align: center;
 }
 
+.challenge-container {
+    position: relative;
+}
+
 .challenge-header {
     margin-bottom: 3.04px;
 }
@@ -433,3 +437,25 @@ header {
         width: calc(100% - 40px);
     }
 }
+
+  .back-arrow {
+            position: absolute;
+            top: 1vh;
+            left: 20px;
+            background: none;
+            border: none;
+            padding: 0px;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            border-radius: 50%;
+            transition: background-color 0.2s ease;
+            width: 50px;
+        }
+
+        .back-arrow svg {
+            width: 24px;
+            height: 24px;
+            fill: #333;
+        }
